# jarvy

./: .betterleaksignore  .codespellignore  .codespellrc  .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .lychee.toml  .pre-commit-hooks.yaml  .vale.ini  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLI_Logo.iconset  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  Makefile  PRIVACY.md  Readme.md  SECURITY.md  SKILL.md  UPGRADING.md  action.yml  build.rs  cliff.toml  deny.toml  jarvy.toml  llms-full.txt  llms.txt  mkdocs.yml  progress.txt
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  SUPPORT.md  allowed_signers  dependabot.yml
.github/DISCUSSION_TEMPLATE/: q-and-a.yml
.github/problem-matchers/: jarvy.json
.github/workflows/: action-e2e.yml  action-release.yml  action-selftest.yml  archived-tools.yml  benchmark.yml  clippy.yml  contributors.yml  coverage.yml  crates.yml  docker-publish.yml  docs-quality.yml  docs.yml  e2e-cross-platform.yml  fuzz.yml  helm-chart-ci.yml  helm-release.yml  installer-e2e.yml  jarvy-ci.yml  jetbrains-ci.yml  jetbrains-publish.yml  mutation.yml  package-install-e2e.yml  prerelease-soak.yml  publish-packages.yml  release-paths.yml  release.yml  scorecard.yml  scripts-lint.yml  security.yml  test.yml  tool-e2e.yml  verify-release.yml  vscode-ci.yml  vscode-integration.yml  vscode-publish.yml  winget-first-submission.yml  winget.yml
assets/icns/: CLI_Logo.icns
assets/wizard-skill/: SKILL.md
competitor-profiles/: coder.md  devfile.md  gitpod.md
crates/cargo-jarvy/: Cargo.toml
crates/cargo-jarvy/src/: main.rs
crates/jarvy-templates/: Cargo.toml
data/: contributors.json  faq.json
docs/: ConfigurationFile.md  MAINTAINER_RELEASE_GUIDE.md  MAINTAINER_SECURITY_SETUP.md  adding-tools.md  ai-hooks.md  ai-sandboxes.md  changelog.md  ci-cd.md  cli-reference.md  cli.md  configuration.md  contributing-testing.md  contributing.md  decisions.md  discover.md  e2e-testing-harness.md  environment.md  error-codes.md  examples.md  faq.md  for-ai-agents.md  git-config.md  git-hooks.md  github-action.md  hooks.md  index.md  installation.md  library-registry.md  marketplace-publishing.md  mcp-registration.md  mcp-server.md  packages.md  quickstart.md  registry-remote.md  release-quirks-jarvy.md  release-testing.md  robots.txt  roles.md  run.md  services.md  (+9 more)
docs/.well-known/: api-catalog  security.txt
docs/assets/: jarvy-setup.cast
docs/competitors/: competitive-analysis.md  vs-asdf.md  vs-chainguard.md  vs-devpod.md  (+7 more)
examples/: README.md
prd/: 001-parallel-tool-installation.md  011-comprehensive-documentation.md  013-expand-tool-coverage.md  014-real-world-testing.md  015-team-enterprise-features.md  016-developer-experience-commands.md  017-ide-ci-integration.md  018-quality-testing-infrastructure.md  019-proxy-support.md  023-user-onboarding-education.md  024-team-enterprise-collaboration.md  027-observability-debugging.md  028-rollback-version-management.md  034-enhanced-dependency-system.md  036-apk-bsd-platform-support.md  038-aws-ec2-e2e-testing-harness.md  049-skills-registry-integration.md  050-debug-ticket-logging.md  051-universal-structured-output.md  052-progress-indicators.md  055-git-skill-sources.md  056-agent-driven-wizard.md  README.md
scripts/: bootstrap.sh  check-archived-tools.sh  cleanup-old-amis.sh  gen-docs.sh  mkdocs_hooks.py  smoke-live.sh
src/: analytics.rs  config.rs  console.rs  dotfiles.rs  error_codes.rs  hooks.rs  init.rs  interactive.rs  lib.rs  main.rs  meta.rs  os_setup.rs  paths.rs  posthog.rs  progress.rs  provisioner.rs  remote.rs  report.rs  setup.rs  shell_init.rs  telemetry.rs  version.rs  workspace.rs
tasks/: 032-support-community-infrastructure.json  035-self-updating-tasks.json  additional-post-install-hooks.json  hooks-003-additional-tool-hooks.json  new_tools.json  prd-001-parallel-tool-installation.json  prd-002-tool-post-install-hooks.json  prd-003-post-install-hooks.json  prd-003.1-tool-post-install-hooks.json  prd-008-environment-variables.json  prd-009-service-management.json  prd-009-tool-post-install-hooks.json  prd-010-additional-default-hooks.json  prd-010-ci-detection.json  prd-011-comprehensive-documentation.json  prd-013-expand-tool-coverage.json  prd-014-real-world-testing.json  prd-015-team-enterprise-features.json  prd-016-developer-experience-commands.json  prd-017-ide-ci-integration.json  prd-018-quality-testing-infrastructure.json  prd-019-proxy-support.json  prd-020-security-scanning-infrastructure.json  prd-021-mcp-server.json  prd-022-remote-telemetry-monitoring.json  prd-023-user-onboarding-education.json  prd-024-team-enterprise-collaboration.json  prd-027-observability-debugging.json  prd-037-main-rs-refactor.json  prd-038-e2e-testing-harness.json  prd-039-language-package-dependencies.json  prd-043-configuration-drift-detection.json  prd-048-pre-commit-hook-installation.json  prd-049-skills-registry-integration.json  prd-050-debug-ticket-logging.json  prd-052-progress-indicators.json  prd-054-library-registry.json  prd-055-git-skill-sources.json  t10-update-scaffolding.json  t11-documentation.json  (+5 more)
tests/: ai_hooks_cli.rs  ai_hooks_integration.rs  ai_hooks_library_matrix.rs  cli_dispatch.rs  cli_tools.rs  cli_unknown.rs  cli_unknown_more.rs  cli_unsupported_tool.rs  default_hook_idempotency.rs  dependency_resolution.rs  e2e_base_tools.rs  e2e_install_pipeline.rs  env_integration.rs  examples_validation.rs  hooks_integration.rs  library_companion_fetch.rs  library_registry_git_e2e.rs  library_registry_integration.rs  mcp_register_integration.rs  new_commands.rs  observability_cli.rs  onboarding_integration.rs  plugin_tools.rs  property.rs  proxy_integration.rs  registry_cli_smoke.rs  registry_e2e_lifecycle.rs  registry_remote_integration.rs  registry_resilience.rs  registry_signature_e2e.rs  registry_tracing_events.rs  release_artifact_render.rs  remote_config.rs  sandbox_integration.rs  security_config_injection.rs  services_integration.rs  setup_chatter.rs  skills_cli.rs  telemetry_disclosure.rs  telemetry_smoke.rs  (+9 more)
(+801 files in other folders)
