[package]
name = "jarvy"
version = "0.1.0"
license = "MIT"
edition = "2024"
description = "Jarvy is a fast, cross-platform CLI that installs and manages developer tools across macOS and Linux."

[build]
jobs=16
rustc-wrapper="sccache"
pipelining=true

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
inquire = "0.9.1"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.9.5"
serde_json = "1.0"
serde_yaml = "0.9"
predicates = "3.1.0"
tracing = "0.1.40"
dirs = "6.0.0"
tracing-subscriber = "0.3.18"
opentelemetry-otlp = { version = "0.31.0", features = ["logs", "http-proto"] }
opentelemetry_sdk = { version = "0.31.0" }
opentelemetry-appender-tracing = "0.31.0"
thiserror = "2.0.16"
ureq = { version = "3.1.2", features = ["json"] }
uuid = { version = "1.10.0", features = ["v7"] }
machineid-rs = "1.2"
semver = "1.0"
regex = "1.11"
once_cell = "1.20"
inventory = "0.3.21"

[dev-dependencies]
tempfile = "3.20.0"
assert_cmd = "2.0.17"

[build-dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 1

[workspace]
members = [
    "crates/cargo-jarvy"
]

[package.metadata.packager]
product-name = "jarvy"

identifier = "io.github.bearbinary.jarvy"
category = "Utility"
homepage = "https://github.com/bearbinary/jarvy"
licenseFile = "LICENSE"
formats = ["all"]                  # Or ["all"] if you want every supported format
# NOTE: The `generate-desktop-entry` key is not supported by cargo-packager and caused
# deserialization errors. It has been removed to maintain compatibility.

[package.metadata.packager.macos]
icons = ["assets/icns/CLI_Logo.icns"]

[package.metadata.packager.windows]
# If an .ico is added later, list it here (e.g., assets/icons/jarvy.ico)
icons = ["assets/CLI_Logo.png"]

[package.metadata.packager.linux]
# If .png sizes are added later, list them here
icons = ["assets/CLI_Logo.png"]

# AppImage extra files (optional; keep/remove to match your repo)
[package.metadata.packager.appimage.files]
"Readme.md" = "usr/share/doc/jarvy/README.md"
"LICENSE" = "usr/share/doc/jarvy/LICENSE"

# Debian package extra files (optional)
[package.metadata.packager.deb.files]
"Readme.md" = "usr/share/doc/jarvy/README.md"
"LICENSE" = "usr/share/doc/jarvy/LICENSE"

# Pacman package extra files (optional)
[package.metadata.packager.pacman.files]
"Readme.md" = "usr/share/doc/jarvy/README.md"
"LICENSE" = "usr/share/doc/jarvy/LICENSE"

# If you also build RPMs via generate-rpm (optional; remove if unused)
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/jarvy", dest = "/usr/bin/jarvy", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/jarvy/LICENSE", doc = true, mode = "0644" },
    { source = "Readme.md", dest = "/usr/share/doc/jarvy/README.md", doc = true, mode = "0644" }
]

# Ensure your binary section matches the actual binary name/path
[[bin]]
name = "jarvy"
path = "src/main.rs"
