[package]
name = "jarvy"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
description = "Jarvy is a fast, cross-platform CLI that installs and manages developer tools across macOS and Linux."
repository = "https://github.com/bearbinary/jarvy"
homepage = "https://jarvy.dev"
documentation = "https://docs.rs/jarvy"
readme = "Readme.md"
keywords = ["devtools", "provisioning", "cli", "developer-experience", "setup"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*",
    "Cargo.toml",
    "LICENSE*",
    "Readme.md",
    "CHANGELOG.md",
]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
# x86_64-apple-darwin intentionally omitted: jarvy v0.1.0+ does not ship
# Intel macOS prebuilts (Apple Silicon only). docs.rs builds for arm64
# macOS plus Linux x86_64 + Windows x86_64.
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
strsim = "0.11"
inquire = "0.9"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
serde_json = "1.0"
serde_yaml = "0.9"
predicates = "3.1"
tracing = "0.1"
dirs = "6.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
opentelemetry = { version = "0.32", features = ["metrics"] }
opentelemetry-otlp = { version = "0.31", features = ["logs", "http-proto", "metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics"] }
opentelemetry-appender-tracing = "0.31"
thiserror = "2.0"
ureq = { version = "3.3", features = ["json"] }
uuid = { version = "1.23", features = ["v7"] }
machineid-rs = "1.2"
semver = "1.0"
regex = "1.12"
once_cell = "1.21"
inventory = "0.3"
wait-timeout = "0.2"
rpassword = "7.3"
rayon = "1.10"
zip = "8.5"
hostname = "0.4"
sys-info = "0.9"
num_cpus = "1.16"
chrono = { version = "0.4", features = ["serde"] }
self_update = { version = "0.44", default-features = false, features = ["ureq", "rustls", "archive-tar", "compression-flate2"] }
sha2 = "0.11"
hex = "0.4"
shellexpand = "3.1"
tempfile = "3.27"
which = "8.0"

[dev-dependencies]
assert_cmd = "2.2"
proptest = "1.11"
criterion = { version = "0.8", features = ["html_reports"] }
serial_test = "3.2"

[[bench]]
name = "config_parsing"
harness = false

[[bench]]
name = "registry_lookup"
harness = false

[[bench]]
name = "version_comparison"
harness = false

[build-dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[workspace]
members = [
    "crates/cargo-jarvy"
]

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }

[workspace.lints.rust]
unsafe_code = "warn"

[lints]
workspace = true

[package.metadata.packager]
product-name = "jarvy"
identifier = "io.github.bearbinary.jarvy"
category = "Utility"
homepage = "https://github.com/bearbinary/jarvy"
licenseFile = "LICENSE"
formats = ["all"]
# cargo-packager treats `icons` as a top-level field. It auto-picks .icns for
# macOS DMG, .png for Linux AppImage, and .ico (or falls back to .png) for
# Windows MSI/EXE based on file extension. Per-platform `[macos]`, `[windows]`,
# and `[linux]` sections do not accept `icons` (verified against the schema:
# MacOsConfig has signing/framework fields only, WindowsConfig has signing,
# LinuxConfig has only `generate_desktop_entry`).
icons = ["assets/icns/CLI_Logo.icns", "assets/CLI_Logo.png"]

# AppImage extra files (optional; keep/remove to match your repo)
[package.metadata.packager.appimage.files]
"Readme.md" = "usr/share/doc/jarvy/README.md"
"LICENSE" = "usr/share/doc/jarvy/LICENSE"

# Debian package extra files (optional)
[package.metadata.packager.deb.files]
"Readme.md" = "usr/share/doc/jarvy/README.md"
"LICENSE" = "usr/share/doc/jarvy/LICENSE"

# Pacman package extra files (optional)
[package.metadata.packager.pacman.files]
"Readme.md" = "usr/share/doc/jarvy/README.md"
"LICENSE" = "usr/share/doc/jarvy/LICENSE"

# If you also build RPMs via generate-rpm (optional; remove if unused)
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/jarvy", dest = "/usr/bin/jarvy", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/jarvy/LICENSE", doc = true, mode = "0644" },
    { source = "Readme.md", dest = "/usr/share/doc/jarvy/README.md", doc = true, mode = "0644" }
]

# Ensure your binary section matches the actual binary name/path
[[bin]]
name = "jarvy"
path = "src/main.rs"
