[package]
name = "jarvy"
version = "0.6.5"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
description = "Jarvy is a fast, cross-platform CLI that installs and manages developer tools across macOS and Linux."
repository = "https://github.com/Cliftonz/jarvy"
homepage = "https://jarvy.dev"
documentation = "https://docs.rs/jarvy"
readme = "Readme.md"
keywords = ["devtools", "provisioning", "cli", "developer-experience", "setup"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*",
    # `src/wizard/skill_drop.rs` pulls this in via include_str!. Without
    # it here the published crate compiles fine locally (file present in
    # the working tree) but FAILS on `cargo install` — cargo publish
    # strips anything outside this allowlist. Scoped to the wizard-skill
    # dir so the 1.4M of logos under assets/ stay out of the crate.
    # (Regression: added in 0.5.0, broke `cargo install jarvy`.)
    "assets/wizard-skill/**/*",
    "Cargo.toml",
    "LICENSE*",
    "Readme.md",
    "CHANGELOG.md",
]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
# x86_64-apple-darwin intentionally omitted: jarvy v0.1.0+ does not ship
# Intel macOS prebuilts (Apple Silicon only). docs.rs builds for arm64
# macOS plus Linux x86_64 + Windows x86_64.
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Workspace member: shared scaffold template + tool-name validator.
# Kept as a tiny dep-free crate so cargo-jarvy can depend on it
# without dragging the whole jarvy compile through.
jarvy-templates = { version = "0.2.0", path = "crates/jarvy-templates" }
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
clap_complete_nushell = "4.6"
strsim = "0.11"
inquire = "0.9"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
serde_json = "1.0"
serde_yaml = "0.9"
predicates = "3.1"
tracing = "0.1"
dirs = "6.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
opentelemetry = { version = "0.32", features = ["metrics"] }
opentelemetry-otlp = { version = "0.32", features = ["logs", "http-proto", "metrics"] }
opentelemetry_sdk = { version = "0.32", features = ["metrics"] }
opentelemetry-appender-tracing = "0.32"
thiserror = "2.0"
ureq = { version = "3.3", features = ["json"] }
uuid = { version = "1.23", features = ["v7"] }
machineid-rs = "1.2"
semver = "1.0"
regex = "1.12"
once_cell = "1.21"
inventory = "0.3"
wait-timeout = "0.2"
rpassword = "7.3"
rayon = "1.10"
zip = "8.5"
hostname = "0.4"
sys-info = "0.9"
num_cpus = "1.16"
chrono = { version = "0.4", features = ["serde"] }
self_update = { version = "0.44", default-features = false, features = ["ureq", "rustls", "archive-tar", "compression-flate2"] }
sha2 = "0.11"
hex = "0.4"
shellexpand = "3.1"
tempfile = "3.27"
which = "8.0"
indicatif = "0.18"
notify = "8"

[features]
# `test-bypass` exposes the loopback-HTTP + JARVY_TEST_HOME escape
# hatches used by the integration test harness. Production release
# builds are compiled WITHOUT this feature, so the
# JARVY_LIBRARY_ALLOW_INSECURE_FETCH / JARVY_REGISTRY_ALLOW_INSECURE_FETCH /
# JARVY_TEST_HOME env vars are inert in shipped binaries (review item 15).
# Cargo enables a crate's dev-deps and all-targets-feature gates when
# `cargo test` runs, so integration tests transparently pick up the
# bypass; release.yml / publish-packages.yml omit the feature flag.
default = []
test-bypass = []

[dev-dependencies]
assert_cmd = "2.2"
proptest = "1.11"
criterion = { version = "0.8", features = ["html_reports"] }
# For forcing marker-file mtime in wizard session tests — the stable
# `std` doesn't expose an mtime setter, so we pull `filetime` (small,
# widely used, no transitive deps) rather than a per-platform unsafe
# `utimensat`/`SetFileTime` block for one test.
filetime = "0.2"
serial_test = "3.2"

# Integration tests for src/sandbox capability probe (PRD-053).
# Used by tests/sandbox_integration.rs to spin real containers and
# assert verify-only / auto-baseline / banner behavior. Cross-platform:
# CI Linux runners exercise it directly; macOS/Apple-Silicon devs run
# it via `make test-sandbox` (cross-compiled aarch64-linux binary
# mounted into an arm64 debian container, native, no emulation).
testcontainers = { version = "0.27", features = ["blocking"] }

# Integration tests that exercise the `test-bypass` escape hatches
# (`JARVY_REGISTRY_ALLOW_INSECURE_FETCH`, `JARVY_LIBRARY_ALLOW_INSECURE_FETCH`).
# Without `--features test-bypass`, cargo silently skips them so a local
# `cargo test` run doesn't surface mysterious env-gated failures. CI
# always runs with `--all-features` so the gate is implicit.
[[test]]
name = "registry_cli_smoke"
path = "tests/registry_cli_smoke.rs"
required-features = ["test-bypass"]

[[test]]
name = "library_registry_git_e2e"
path = "tests/library_registry_git_e2e.rs"
required-features = ["test-bypass"]

[[test]]
name = "library_companion_fetch"
path = "tests/library_companion_fetch.rs"
required-features = ["test-bypass"]

[[test]]
name = "registry_e2e_lifecycle"
path = "tests/registry_e2e_lifecycle.rs"
required-features = ["test-bypass"]

[[test]]
name = "registry_remote_integration"
path = "tests/registry_remote_integration.rs"
required-features = ["test-bypass"]

[[test]]
name = "registry_resilience"
path = "tests/registry_resilience.rs"
required-features = ["test-bypass"]

[[test]]
name = "registry_signature_e2e"
path = "tests/registry_signature_e2e.rs"
required-features = ["test-bypass"]

[[test]]
name = "registry_tracing_events"
path = "tests/registry_tracing_events.rs"
required-features = ["test-bypass"]

[[test]]
name = "skills_cli"
path = "tests/skills_cli.rs"
required-features = ["test-bypass"]

[[test]]
name = "wizard_integration"
path = "tests/wizard_integration.rs"
required-features = ["test-bypass"]

[[test]]
name = "wizard_e2e_happy_path"
path = "tests/wizard_e2e_happy_path.rs"
required-features = ["test-bypass"]

[[test]]
name = "wizard_e2e_repo_matrix"
path = "tests/wizard_e2e_repo_matrix.rs"
required-features = ["test-bypass"]

[[bench]]
name = "config_parsing"
harness = false

[[bench]]
name = "registry_lookup"
harness = false

[[bench]]
name = "version_comparison"
harness = false

[build-dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[workspace]
members = [
    "crates/cargo-jarvy",
    "crates/jarvy-templates"
]

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }

[workspace.lints.rust]
unsafe_code = "warn"

[lints]
workspace = true

[package.metadata.packager]
product-name = "jarvy"
identifier = "io.github.cliftonz.jarvy"
category = "Utility"
homepage = "https://github.com/Cliftonz/jarvy"
licenseFile = "LICENSE"
formats = ["all"]
# cargo-packager treats `icons` as a top-level field. It auto-picks .icns for
# macOS DMG, .png for Linux AppImage, and .ico (or falls back to .png) for
# Windows MSI/EXE based on file extension. Per-platform `[macos]`, `[windows]`,
# and `[linux]` sections do not accept `icons` (verified against the schema:
# MacOsConfig has signing/framework fields only, WindowsConfig has signing,
# LinuxConfig has only `generate_desktop_entry`).
icons = ["assets/icns/CLI_Logo.icns", "assets/CLI_Logo.png"]

# AppImage extra files (optional; keep/remove to match your repo)
[package.metadata.packager.appimage.files]
"Readme.md" = "usr/share/doc/jarvy/README.md"
"LICENSE" = "usr/share/doc/jarvy/LICENSE"

# Debian package extra files (optional)
[package.metadata.packager.deb.files]
"Readme.md" = "usr/share/doc/jarvy/README.md"
"LICENSE" = "usr/share/doc/jarvy/LICENSE"

# Pacman package extra files (optional)
[package.metadata.packager.pacman.files]
"Readme.md" = "usr/share/doc/jarvy/README.md"
"LICENSE" = "usr/share/doc/jarvy/LICENSE"

# If you also build RPMs via generate-rpm (optional; remove if unused)
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/jarvy", dest = "/usr/bin/jarvy", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/jarvy/LICENSE", doc = true, mode = "0644" },
    { source = "Readme.md", dest = "/usr/share/doc/jarvy/README.md", doc = true, mode = "0644" }
]

# Ensure your binary section matches the actual binary name/path
[[bin]]
name = "jarvy"
path = "src/main.rs"
