[package]
name = "cargo-jarvy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
# Depend ONLY on the dep-free jarvy-templates crate — keeps cargo-jarvy
# a sub-second compile. Previously this depended on the full jarvy
# crate, which dragged in tokio/serde/OTEL just to call two pure
# functions.
jarvy-templates = { version = "0.1.0", path = "../jarvy-templates" }
